# cg1

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  format.sh
data/models/: van.mtl
data/scenes/: main.txt  main.yaml  test.txt
data/subscenes/: planet.txt  rocket.txt  satellite.txt  sphere.txt  star.txt  ufo.txt
shaders/: renderer.frag  renderer.vert  shadowmap.geom
src/: main.cc
src/camera/: camera.cc  camera.h
src/components/: cameracomponent.cc  cameracomponent.h  cameracontrollercomponent.cc  cameracontrollercomponent.h  cameracyclecomponent.cc  cameracyclecomponent.h  carcontrollercomponent.cc  carcontrollercomponent.h  lightcomponent.cc  lightcomponent.h  mesh.h  meshcomponent.cc  meshcomponent.h  orbitalcameracontrollercomponent.cc  orbitalcameracontrollercomponent.h  rigidbodycomponent.cc  rigidbodycomponent.h  steeringanimationcomponent.cc  steeringanimationcomponent.h  vehiclecomponent.cc  vehiclecomponent.h
src/core/: component.h  componentfactory.cc  componentfactory.h  enableable.h  node.cc  node.h
src/model/: modelimporter.cc  modelimporter.h
src/physics/: physicsengine.cc  physicsengine.h  rigidbody.cc  rigidbody.h
src/renderer/: renderable.cc  renderable.h  renderer.cc  renderer.h  skybox.cc  skybox.h  texture.cc  texture.h
src/scene/: scene.cc  scene.h  sceneparser.cc  sceneparser.h
src/shapes/: baseshape.cc  baseshape.h  box.cc  box.h  cone.cc  cone.h  cylinder.cc  cylinder.h  modelshape.cc  modelshape.h  semisphere.cc  semisphere.h  sphere.cc  sphere.h  torus.cc  torus.h
src/transformations/: rotation.h  (+3 more)
(+47 files in other folders)
